# PassManager

./: CMakeLists.txt  GuardManager.cpp  PluginManager.h  PluginSystem.h  README.md  UpdaterClass.cpp  UpdaterClass.h  main.cpp
src/: Updater.cpp  main.cpp
src/PluginSystem/: PluginManager.h  PluginSystem.h
src/Security/: GuardManager.cpp  RunSetup.cpp  RunSetup.h
src/UpdateSystem/: UpdaterClass.cpp  UpdaterClass.h
